--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UFT-8">
     <head>
+        <meta charset="UFT-8">
         <title>Odin Landing Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
