remove divs made more simple html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>Header Logo</div>
-        <div>
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </div>
-
+        <h1 class="headerOne">Header Logo<h1>
+        <ul class="header links">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </ul>
     </body>
 </html>
