--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 class="headerOne">Header Logo<h1>
-        <ul class="header links">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+        <div class="containerHeaderOne">
+            <h1 class="headerOne">Header Logo</h1>
+            <ul class="header links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
     </body>
 </html>
