--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="containerHeaderOne">
             <h1 class="headerOne">Header Logo</h1>
-            <ul class="header links">
+            <ul class="headerLinks">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
