--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <div class="containerHeaderOne">
             <h1 class="headerOne">Header Logo</h1>
             <ul class="headerLinks">
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a class ="headerLink" href="#">header link one</a></li>
+                <li><a class ="headerLink" href="#">header link two</a></li>
+                <li><a class ="headerLink" href="#">header link three</a></li>
             </ul>
         </div>
     </body>
