add all of the text for the hero portion

--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
                 <li><a class ="headerLink" href="#">header link three</a></li>
             </ul>
         </div>
+        <div class="heroContainer">
+            <div class="heroContent">
+                <h1 class="heroHeader">This webiste is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller gont and the color is lower contrast.</p>
+                <button>Sign up</button>
+            </div>
+            <div class="heroImage">
+                this is a placeholder for an image
+            </div>
+        </div>
     </body>
 </html>
