make hero header a div because headers have dumb properites

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="heroContainer">
             <div class="heroContent">
-                <h1 class="heroHeader">This webiste is awesome</h1>
+                <div class="heroHeader">This webiste is awesome</div>
                 <p>This website has some subtext that goes here under the main title. It's a smaller gont and the color is lower contrast.</p>
                 <button>Sign up</button>
             </div>
