add class to paragraph tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="heroContainer">
             <div class="heroContent">
                 <div class="heroHeader">This webiste is awesome</div>
-                <p>This website has some subtext that goes here under the main title. It's a smaller gont and the color is lower contrast.</p>
+                <p class="heroSubText">This website has some subtext that goes here under the main title. It's a smaller gont and the color is lower contrast.</p>
                 <button>Sign up</button>
             </div>
             <div class="heroImage">
