--- a/index.html
+++ b/index.html
@@ -24,5 +24,16 @@
                 this is a placeholder for an image
             </div>
         </div>
+        <div class="section2container">
+            <div class="section2Header">Some random information.</div>
+            <div class="imagesContainer">
+               <ul>
+                    <div class="image"><img src="" alt="">this is some subtext under an illustration or image</div>
+                    <div class="image"><img src="" alt="">this is some subtext under an illustration or image</div>
+                    <div class="image"><img src="" alt="">this is some subtext under an illustration or image</div>
+                    <div class="image"><img src="" alt="">this is some subtext under an illustration or image</div>
+               </ul>
+            </div>
+        </div>
     </body>
 </html>
