add images and changed their size

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="section2Header">Some random information.</div>
             <div class="imagesContainer">
                <ul>
-                    <div class="image"><img src="" alt="">this is some subtext under an illustration or image</div>
-                    <div class="image"><img src="" alt="">this is some subtext under an illustration or image</div>
-                    <div class="image"><img src="" alt="">this is some subtext under an illustration or image</div>
-                    <div class="image"><img src="" alt="">this is some subtext under an illustration or image</div>
+                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">this is some subtext under an illustration or image</div>
+                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">this is some subtext under an illustration or image</div>
+                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">this is some subtext under an illustration or image</div>
+                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">this is some subtext under an illustration or image</div>
                </ul>
             </div>
         </div>
