fix classes for my second section images

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="section2container">
             <div class="section2Header">Some random information.</div>
             <div class="imagesContainer">
-               <ul>
-                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">this is some subtext under an illustration or image</div>
-                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">this is some subtext under an illustration or image</div>
-                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">this is some subtext under an illustration or image</div>
-                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">this is some subtext under an illustration or image</div>
+               <ul class="imagesUl">
+                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">This is some subtext under an illustration or image.</div>
+                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">This is some subtext under an illustration or image.</div>
+                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">This is some subtext under an illustration or image.</div>
+                    <div class="image"><img src="./images/texture-ga1ef4fc6c_1920.jpg" alt="">This is some subtext under an illustration or image.</div>
                </ul>
             </div>
         </div>
