--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
                </ul>
             </div>
         </div>
+        <div class="section3Container">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
+                All I know is that it looks nice.<h6>-Thor, God of Thunder</h6>
+            </div>
+        </div>
     </body>
 </html>
