--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         <div class="section3Container">
             <div class="quote">This is an inspiring quote, or a testimonial from a customer. 
                 Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
-                All I know is that it looks nice.<h6>-Thor, God of Thunder</h6>
+                All I know is that it looks nice.
             </div>
+            <div class="quotePerson">-Thor, God of Thunder</div>
         </div>
     </body>
 </html>
