--- a/index.html
+++ b/index.html
@@ -42,5 +42,11 @@
             </div>
             <div class="quotePerson">-Thor, God of Thunder</div>
         </div>
+        <div class="section4">
+            <div class="section4ContentContainer">
+                <div>call to action! It's time!</div>
+                <button>Sign Up</button>
+            </div>
+        </div>
     </body>
 </html>
