fix section 4 with classes

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
         </div>
         <div class="section4">
             <div class="section4ContentContainer">
-                <div>call to action! It's time!</div>
-                <button>Sign Up</button>
+                <div>
+                    <h5 class="section4Header">all to action! It's time!</h5>
+                    <p>Sign up for out product by clicking that button right over there!</p>
+                </div>
+                <button class="button2">Sign Up</button>
             </div>
         </div>
     </body>
