add class to section 4

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="section4ContentContainer">
                 <div>
                     <h5 class="section4Header">call to action! It's time!</h5>
-                    <p>Sign up for out product by clicking that button right over there!</p>
+                    <p class="section4content">Sign up for out product by clicking that button right over there!</p>
                 </div>
                 <button class="button2">Sign Up</button>
             </div>
