fix another typo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="section4">
             <div class="section4ContentContainer">
                 <div>
-                    <h5 class="section4Header">call to action! It's time!</h5>
+                    <h5 class="section4Header">Call to action! It's time!</h5>
                     <p class="section4content">Sign up for out product by clicking that button right over there!</p>
                 </div>
                 <button class="button2">Sign Up</button>
