--- a/index.html
+++ b/index.html
@@ -51,5 +51,8 @@
                 <button class="button2">Sign Up</button>
             </div>
         </div>
+        <div class="footer">
+            Copyright © The Odin Project 2021
+        </div>
     </body>
 </html>
